--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -4,26 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Descripcion SEO -->
     <meta
       name="description"
       content="En nuestra tienda musical tenemos las mejores marcas de instrumentos musicales, las mejores marcas en calidad precio, primeras marcas en nuestra tienda musical"
     />
+    <!-- Palabras claves SEO -->
     <meta
       name="keywords"
       content="marcas de instrumentos musicales, primeras marcas de instrumentos musicales, segundas marcas de instrumentos musicales, mejores marcas de instrumentos musicales, marcas de instrumentos musicales calidad precio, marcas de guitarras, marcas de bajo, marcas de baterias, marcas de piano, marcas de teclado, marcas de microfonos, marcas de saxofones, marcas de cuerdas, marcas de amplificadores, marcas de pedales de efecto, marcas de pedaleras digitales"
     />
+    <!-- Link de Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <!-- Fuente de GogleFonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Link de animaciones -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <!-- Link de estilos CSS -->
     <link rel="stylesheet" href="../css/styles.css" />
-    <title>Las mejores marcas de instrumentos musicales estan en nuestra tienda Musicalmente vivo, primeras y segundas marcas de instrumentos musicales aqui</title>
+    <title>
+      Las mejores marcas de instrumentos musicales estan en nuestra tienda
+      Musicalmente vivo, primeras y segundas marcas de instrumentos musicales
+      aqui
+    </title>
   </head>
   <body>
     <!-- Header y Nav idem index -->
@@ -73,10 +89,12 @@
     </header>
     <main>
       <section>
-        <div class="container">
-          <div class="row my-4">
-            <div class="col borde-contenedor m-4 text-center animate__animated animate__fadeInDown">
-              <h1 class="borde b-marcas">Nuestras <span>Marcas</span></h1>
+        <div class="container my-4">
+          <div class="row marcas-fila">
+            <div
+              class="col borde-contenedor m-4 text-center animate__animated animate__fadeInDown"
+            >
+              <h1 class="b-marcas">Nuestras <span>Marcas</span></h1>
             </div>
           </div>
           <!-- Aqui empiezan las cards, en cada fila puse dos columnas, y dentro de cada columna dos card de bootstrap -->
@@ -482,12 +500,13 @@
         </div>
       </footer>
     </main>
-    <!-- Scripts -->
+    <!-- Scripts de Boostrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <!-- Scripts de iconos -->
     <script
       src="https://kit.fontawesome.com/d4f42c1740.js"
       crossorigin="anonymous"
