--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,26 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Descripcion SEO -->
     <meta
       name="description"
       content="Encuentra en nuestra tienda online los mejores instrumentos musicales, instrumentos musicales nuevos y usados, no te quedes sin comprar tu instrumento musical en Musicalmente vivo"
     />
+    <!-- Palabras claves SEO -->
     <meta
       name="keywords"
       content="La mejor tienda de instrumentos musicales, comrpar instrumentos musicales, venta de instrumentos musicales, venta de guitarras, venta de bajos electricos, venta de pianos, venta de microfonos, venta de baterias, venta de saxofones, venta de amplificadores, tu tienda musical, venta de instrumentos usados, venta de instrumentos nuevos"
     />
+    <!-- Link de Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <!-- Fuente de GogleFonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Link de animaciones -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <!-- Animaciones libreria AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- Link de estilos CSS -->
     <link rel="stylesheet" href="../css/styles.css" />
     <title>
       Tu tienda online de instrumentos musicales favorita, encuentra todo lo que
@@ -78,7 +90,7 @@
     </header>
     <main>
       <!-- Seccion de tienda convensional, me guie por una pagina de Fender-->
-      <section class="container-fluid tienda-contenedor">
+      <section class="container-fluid tienda-contenedor my-4">
         <div class="row my-4">
           <div
             class="col text-center fw-bold tienda-titulo animate__animated animate__fadeInDown"
@@ -574,16 +586,18 @@
         </div>
       </footer>
     </main>
-    <!-- scripts -->
+    <!-- Scripts de Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <!-- Scripts de iconos -->
     <script
       src="https://kit.fontawesome.com/d4f42c1740.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Scripts de Animaciones AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
