--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Despcripcion SEO -->
     <meta
       name="description"
       content="Descubre una amplia selección de instrumentos musicales en nuestra tienda en línea. Encuentra todo lo que necesitas para tu pasión por la música, desde guitarras y pianos hasta baterías y equipos de sonido. Ofrecemos productos de alta calidad de las mejores marcas del mercado, garantizando la excelencia en cada nota. ¡Explora nuestro catálogo y deja que la música sea tu inspiración! Compra fácilmente con envío rápido y atención al cliente excepcional. ¡Haz realidad tus sueños musicales con nosotros!"
     />
+    <!-- Palabras claves SEO -->
     <meta
       name="keywords"
       content="Instrumentos musicales, tienda de instrumentos musicales, comprar instrumentos musicales, tienda online de instrumentos musicales, instrumentos musicales baratos, instrumentos musicales de calidad, instrumentos musicales nuevos, instrumentos musicales usados, guitarras, bajos, baterias, pianos, teclados, saxofones, amplificadores, microfonos, pedales de efecto, accesorios para instrumentos musicales, partituras, acordes, equipo de grabacion musical, cuerdas, la mejor tienda musical, la tienda de musica mas barata, guitarras de calidad, instrumentos baratos,"
@@ -17,14 +19,23 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <!-- Link de para llamar bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <!-- Fuente de GogleFonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <!-- Animaciones libreria AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- Link de estilos CSS -->
     <link rel="stylesheet" href="./css/styles.css" />
     <title>
       Encuentra los mejores instrumentos en nuestra tienda musical, el perfecto
@@ -37,7 +48,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="#"
-            ><img src="./images/LOGO.png" alt="Logo"
+            ><img src="./images/logo.png" alt="Logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -79,7 +90,7 @@
     </header>
     <main>
       <!-- Encabezados editados con bootstrap-->
-      <div class="container-index my-3">
+      <div class="container-index my-4">
         <div class="row">
           <div class="col text-center">
             <h1 class="fw-bold animate__animated animate__fadeInDown">
@@ -122,7 +133,7 @@
                 <div class="carousel-item">
                   <div class="card bg-dark text-white">
                     <img
-                      src="./images/Drumone.png"
+                      src="./images/drumone.png"
                       class="card-img rounded mx-auto d-block w-100"
                       alt="bateria"
                     />
@@ -136,7 +147,7 @@
                 <div class="carousel-item">
                   <div class="card bg-dark text-white">
                     <img
-                      src="./images/Sitetizadorone.png"
+                      src="./images/sitetizadorone.png"
                       class="card-img rounded mx-auto d-block w-100"
                       alt="sintetizador"
                     />
@@ -322,16 +333,18 @@
         </div>
       </footer>
     </main>
-    <!-- scripts -->
+    <!-- scripts de bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <!-- scripts de iconos -->
     <script
       src="https://kit.fontawesome.com/d4f42c1740.js"
       crossorigin="anonymous"
     ></script>
+    <!-- scripts de animaciones AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
