--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Descripcion SEO -->
     <meta
       name="description"
       content="Contacte con la mejor tienda musical del mundo, respondemos todas las consultas por que nos interesan nuestro clientes. Manda tu mensaje de forma segura."
     />
+    <!-- Palabras claves SEO -->
     <meta
       name="keywords"
       content="tienda de instrumentos musicales, contacto, instrumentos musicales, contacto de tienda musical, asesoramiento musical, soporte al cliente de instrumentos musicales, consultas sobre instrumentos musicales, reparacion de instrumentos musicales, instrumento perfecto, tienda de musica online, envio rapido de instrumentos musicales, respuesta rapida, preguntas frecuentes de instrumentos musicales, mensaje"
     />
+    <!-- Link de Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,6 +38,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <!-- Link de estilos CSS -->
     <link rel="stylesheet" href="../css/styles.css" />
     <title>
       Ponte en contacto con la tienda musical, Musicalmente vivo, y enterate de
@@ -89,7 +93,7 @@
     </header>
     <main>
       <!-- En este html encontraran solo un texto y un formulario, lo trabaje lo mas que pude en el tiempo que tube -->
-      <section class="contacto">
+      <section class="contacto my-4">
         <div class="content">
           <h1 class="contacto-titulo">Contactate con <span>Nosotros</span></h1>
           <div class="formulario-card animate__animated animate__backInLeft">
@@ -199,12 +203,13 @@
         </div>
       </footer>
     </main>
-    <!-- Scripts -->
+    <!-- Scripts de Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <!-- Scripts de iconos -->
     <script
       src="https://kit.fontawesome.com/d4f42c1740.js"
       crossorigin="anonymous"
