--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,26 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Descripcion SEO -->
     <meta
       name="description"
       content="Nuestra tienda musical tiene su propia historia, conocenos y ven a formar parte de nuestra familia musical"
     />
+    <!-- Palabras claves SEO -->
     <meta
       name="keywords"
       content="Historia tienda de instrumentos musicales, conoce la tienda de instrumentos musicales, musicalmente vivo, conoce a musicalmente vivo, conoce la mejor tienda de instrumentos musicales, nosotros tienda de instrumentos musicales"
     />
+    <!-- Link de Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <!-- Fuente de GogleFonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Link de Animaciones -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <!-- Animaciones libreria AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- Link de estilos CSS -->
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Conoce nuestra tienda de instrumentos musicales</title>
   </head>
@@ -75,7 +87,7 @@
     </header>
     <main>
       <!-- En este html, solo agregue poca informacion, me parecio mas sencillo, a parte por la falta de tiempo que tube -->
-      <section class="nosotros-contenedor">
+      <section class="nosotros-contenedor my-4">
         <div class="animate__animated animate__fadeInDown">
           <h1 class="nosotros-titulo">
             CONOCENOS<br />
@@ -100,10 +112,13 @@
             </div>
             <!-- Agregue un video de una tienda externa, y lo recorte para que no se vea el nombre de la tienda original, le saque el sonido para que se pudiera reproducir en autoplay
             y deje la opcion de "controls" para que tengan la opcion de ponerle el sonido -->
-            <div class="col-sm-12 col-md-6 my-4" data-aos="fade-left"
-            data-aos-offset="300"
-            data-aos-easing="ease-in-sine"
-            data-aos-duration="1000">
+            <div
+              class="col-sm-12 col-md-6 my-4"
+              data-aos="fade-left"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine"
+              data-aos-duration="1000"
+            >
               <div>
                 <video width="100%" height="100%" autoplay muted controls loop>
                   <source src="../videos/tienda.mp4" type="video/mp4" />
@@ -174,16 +189,18 @@
         </div>
       </footer>
     </main>
-    <!-- Scripts -->
+    <!-- Scripts de Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <!-- Scripts de iconos -->
     <script
       src="https://kit.fontawesome.com/d4f42c1740.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Scripts de Animaciones -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
