despcripciones de alt

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="#"
-            ><img src="./images/logo.png" alt="Logo"
+            ><img src="./images/logo.png" alt="Logo principal de nuestra pagina Musicalmente vivo, es una guitarra en blanco y negro con el nombre de nuestra pagina web debajo"
           /></a>
           <button
             class="navbar-toggler"
@@ -119,7 +119,7 @@
                     <img
                       src="./images/fender.jpg"
                       class="card-img rounded mx-auto d-block w-100"
-                      alt="guitarras"
+                      alt="Guitarras de la marca Fender, apoyadas sobre amplificadores de marca Fender, en un fondo negro"
                     />
                     <div class="card-img-overlay">
                       <h4 class="card-title">PRIMERAS MARCAS</h4>
@@ -135,7 +135,7 @@
                     <img
                       src="./images/drumone.png"
                       class="card-img rounded mx-auto d-block w-100"
-                      alt="bateria"
+                      alt="Bateria acustica marca Mododrem, sola sobre un fondo color madera oscuro"
                     />
                     <div class="card-img-overlay">
                       <h4 class="card-title">EXPLOTA TU POTENCIAL</h4>
@@ -149,7 +149,7 @@
                     <img
                       src="./images/sitetizadorone.png"
                       class="card-img rounded mx-auto d-block w-100"
-                      alt="sintetizador"
+                      alt="piano sintetizador clasico sobre un fondo color madera oscuro"
                     />
                     <div class="card-img-overlay">
                       <h4 class="card-title">CON LOS NUEVOS SINTETIZADORES</h4>
@@ -206,7 +206,7 @@
               data-aos-duration="1000"
             >
               <div class="card" style="width: 18rem">
-                <img src="./images/bajo.jpg" class="card-img-top" alt="bajos" />
+                <img src="./images/bajo.jpg" class="card-img-top" alt="dos bajos electricos acostados sobre un piso de madera" />
                 <div class="card-body">
                   <h5 class="card-title text-center fw-bold">
                     BAJOS ELECTRICOS
@@ -230,7 +230,7 @@
                 <img
                   src="./images/microfonos.png"
                   class="card-img-top"
-                  alt="microfonos"
+                  alt="doce tipo de microfonos distintos alineados en una misma imagen"
                 />
                 <div class="card-body">
                   <h5 class="card-title fw-bold text-center">MICROFONOS</h5>
@@ -254,7 +254,7 @@
                 <img
                   src="./images/acusticas.png"
                   class="card-img-top"
-                  alt="guitarras acusticas"
+                  alt="sala de grabacion gibson, repleta de guitarras acusticas, criollas y electroacusticas, una guitarra acostada encima de un sillon, otra apoyada en el mismo sillon, otra sobre un pie de guitarra y muchas mas colgadas en las paredes"
                 />
                 <div class="card-body">
                   <h5 class="card-title fw-bold text-center">
