--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -48,7 +48,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
-            ><img src="../images/LOGO.png" alt="Logo"
+            ><img src="../images/logo.png" alt="Logo principal de nuestra pagina Musicalmente vivo, es una guitarra en blanco y negro con el nombre de nuestra pagina web debajo"
           /></a>
           <button
             class="navbar-toggler"
@@ -119,7 +119,7 @@
               <img
                 src="../images/tienda/fender.webp"
                 class="card-img-top"
-                alt="Guitarra Fender Stratocaster"
+                alt="Guitarra Fender Stratocaster color madera con bordes negros lackeada, con 3 microfonos single coins"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -144,7 +144,7 @@
               <img
                 src="../images/tienda/lespaul.png"
                 class="card-img-top"
-                alt="Guitarra Gibson Les Paul"
+                alt="Guitarra Gibson Les Paul de color madera con bordes rojos con negro con microfonos de doble bobina"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -169,7 +169,7 @@
               <img
                 src="../images/tienda/yamaha.webp"
                 class="card-img-top"
-                alt="Guitarra Yamaha Acustica"
+                alt="Guitarra Yamaha Acustica lackeada color madera con negro oscuro en los bordes"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -193,7 +193,7 @@
               <img
                 src="../images/tienda/criolla.jpg"
                 class="card-img-top"
-                alt="Guitarra Criolla"
+                alt="Guitarra Criolla color natural madera clasica"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -225,7 +225,7 @@
               <img
                 src="../images/tienda/bajo-gibson.jpg"
                 class="card-img-top"
-                alt="Bajo Gibson"
+                alt="Bajo Gibson color rojo, de 4 cuerdas con forma de dos puntas en cada lado, con dos microfonos de doble bobina"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -250,7 +250,7 @@
               <img
                 src="../images/tienda/bajo-yamaha.webp"
                 class="card-img-top"
-                alt="Bajo Yamaha"
+                alt="Bajo Yamaha de cinco cuerdas color negro en un fondo blanco"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -275,7 +275,7 @@
               <img
                 src="../images/tienda/bateria-yamaha.webp"
                 class="card-img-top"
-                alt="Bateria Yamaha Acustica"
+                alt="Bateria Yamaha Acustica color marron claro, armada en un set de fondo blanco"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -299,7 +299,7 @@
               <img
                 src="../images/tienda/bateria-tama.jpg"
                 class="card-img-top"
-                alt="Guitarra Criolla"
+                alt="Bateria acustica marca tama con cuerpos en color rojo sangre"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -331,7 +331,7 @@
               <img
                 src="../images/tienda/korg.jpg"
                 class="card-img-top"
-                alt="Teclado Korg"
+                alt="Teclado Korg profesional de 61 teclas, con dos parlantes incluidos en cada lado color negro con pantalla led digital en el medio encima de las teclas"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -355,7 +355,7 @@
               <img
                 src="../images/tienda/roland.jpg"
                 class="card-img-top"
-                alt="Teclado Roland"
+                alt="Teclado Roland color rojo, con pantalla led"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -379,7 +379,7 @@
               <img
                 src="../images/tienda/sintetizadorPolv.jpg"
                 class="card-img-top"
-                alt="Sintetizador Poly D"
+                alt="Sintetizador Poly D analogo con ecualizador color negro en el medio y marron claro a los laterales"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -403,7 +403,7 @@
               <img
                 src="../images/tienda/nordwave.jpg"
                 class="card-img-top"
-                alt="Sintetizaor Nord Wave"
+                alt="Sintetizaor Nord Wave rojo con muchos botones y perillas en palabras literales, hermoso"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -435,7 +435,7 @@
               <img
                 src="../images/tienda/shurei.webp"
                 class="card-img-top"
-                alt="Microfono shure inalambrico"
+                alt="Microfono shure inalambrico negro acostado sobre el receptor cuadrado de señal"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -459,7 +459,7 @@
               <img
                 src="../images/tienda/rode.jpg"
                 class="card-img-top"
-                alt="Microfono Rode"
+                alt="Microfono Rode, es un microfono que tiene alrededor fierros que lo sostienen  y de frente un receptor condensador circular para absorber el sonido ambiental"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -483,7 +483,7 @@
               <img
                 src="../images/tienda/saxofon.jpg"
                 class="card-img-top"
-                alt="Saxofon alto"
+                alt="Saxofon alto color dorado brillante"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -507,7 +507,7 @@
               <img
                 src="../images/tienda/trompeta.jpg"
                 class="card-img-top"
-                alt="Trompeta Yamaha"
+                alt="Trompeta Yamaha color dorada brillante"
               />
               <div class="card-body">
                 <h5 class="card-title text-center">
