--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,7 +51,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
-            ><img src="../images/LOGO.png" alt="Logo"
+            ><img src="../images/logo.png" alt="Logo principal de nuestra pagina Musicalmente vivo, es una guitarra en blanco y negro con el nombre de nuestra pagina web debajo"
           /></a>
           <button
             class="navbar-toggler"
