--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -45,7 +45,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
-            ><img src="../images/LOGO.png" alt="Logo"
+            ><img src="../images/logo.png" alt="Logo principal de nuestra pagina Musicalmente vivo, es una guitarra en blanco y negro con el nombre de nuestra pagina web debajo"
           /></a>
           <button
             class="navbar-toggler"
@@ -121,7 +121,7 @@
             >
               <div>
                 <video width="100%" height="100%" autoplay muted controls loop>
-                  <source src="../videos/tienda.mp4" type="video/mp4" />
+                  <source src="../videos/tienda.mp4" type="video/mp4"/>
                 </video>
               </div>
             </div>
