logo arreglado en index

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="#"
-            ><img src="./images/logo.png" alt="Logo principal de nuestra pagina Musicalmente vivo, es una guitarra en blanco y negro con el nombre de nuestra pagina web debajo"
+            ><img
+              src="./images/Logo.png"
+              alt="Logo principal de nuestra pagina Musicalmente vivo, es una guitarra en blanco y negro con el nombre de nuestra pagina web debajo"
           /></a>
           <button
             class="navbar-toggler"
@@ -206,7 +208,11 @@
               data-aos-duration="1000"
             >
               <div class="card" style="width: 18rem">
-                <img src="./images/bajo.jpg" class="card-img-top" alt="dos bajos electricos acostados sobre un piso de madera" />
+                <img
+                  src="./images/bajo.jpg"
+                  class="card-img-top"
+                  alt="dos bajos electricos acostados sobre un piso de madera"
+                />
                 <div class="card-body">
                   <h5 class="card-title text-center fw-bold">
                     BAJOS ELECTRICOS
