--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -48,7 +48,9 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
-            ><img src="../images/logo.png" alt="Logo principal de nuestra pagina Musicalmente vivo, es una guitarra en blanco y negro con el nombre de nuestra pagina web debajo"
+            ><img
+              src="../images/logo.png"
+              alt="Logo principal de nuestra pagina Musicalmente vivo, es una guitarra en blanco y negro con el nombre de nuestra pagina web debajo"
           /></a>
           <button
             class="navbar-toggler"
