--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
           <a class="navbar-brand" href="#"
             ><img
-              src="./images/Logo.png"
+              src="./images/logo.png"
               alt="Logo principal de nuestra pagina Musicalmente vivo, es una guitarra en blanco y negro con el nombre de nuestra pagina web debajo"
           /></a>
           <button
