Intento de arreglar el logo

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a class="navbar-brand" href="#"
             ><img
               src="./images/logo.png"
-              alt="Logo principal de nuestra pagina Musicalmente vivo, es una guitarra en blanco y negro con el nombre de nuestra pagina web debajo"
+              alt="logo principal de nuestra pagina Musicalmente vivo es una guitarra negra con fondo blanco"
           /></a>
           <button
             class="navbar-toggler"
