--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -48,7 +48,7 @@
         <div class="container">
           <a class="navbar-brand" href="../index.html"
             ><img
-              src="../images/logo.png"
+              src="../images/logo/logo.png"
               alt="logo principal de nuestra pagina Musicalmente vivo es una guitarra negra con fondo blanco"
           /></a>
           <button
